# oku

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: city_generation.rs
data/: default_weights.json
docs/: OKU_STRUCTURE.md  OVERVIEW.md
examples/: svg.rs  visualize.rs
src/: arrival.rs  catalog.rs  config.rs  erosion.rs  hierarchy.rs  interpret.rs  lib.rs  output.rs  potential.rs  spec.rs  translate.rs
