[package]
name = "oku"
version = "0.1.0"
edition = "2024"
authors = ["Elias Vahlberg"]
description = "PCB-inspired procedural city generation — a domain-specific facade over ogun"
license = "MIT"
repository = "https://github.com/EliasVahlberg/oku"
keywords = ["procgen", "city", "urban", "game-theory"]
categories = ["algorithms", "game-development", "simulation"]

[dependencies]
ogun = "0.2.0"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "city_generation"
harness = false
